[gd_scene load_steps=13 format=2]

[ext_resource path="res://Experiments/JustBetterEnvironment/BetterEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://Experiments/NavmeshTest/CameraClickPlacer.gd" type="Script" id=2]
[ext_resource path="res://Experiments/NavmeshTest/GlobalNavigation.gd" type="Script" id=3]
[ext_resource path="res://Experiments/NavmeshTest/EnemyPlaceholder.gd" type="Script" id=4]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 32, 32 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 16, 0.01, 16 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( -15.4, 0.295524, -3.4, -8.5, 0.295524, -3.4, -7.3, 0.295524, -5.2, -0.0999994, 0.295524, -10.6, -0.0999994, 0.295524, -15.4, -7.9, 0.295524, -15.4, -7.3, 0.295524, -5.2, -0.0999994, 0.295524, -10.6, -7.9, 0.295524, -15.4, -15.4, 0.295524, -15.4, -15.4, 0.295524, -3.4, 12.5, 0.295524, 7.4, 12.5, 0.295524, 8, 15.5, 0.295524, 8, 5, 0.295524, 0.5, 7.1, 0.295524, 2.9, 7.7, 0.295524, 2.9, 2.6, 0.295524, -6.7, 4.1, 0.295524, 0.5, 5, 0.295524, 0.5, 2.6, 0.295524, -7.9, -0.0999994, 0.295524, -15.4, -0.0999994, 0.295524, -10.6, 2.6, 0.295524, -7.9, 7.7, 0.295524, -15.4, 7.7, 0.295524, 2.9, 12.5, 0.295524, 7.4, 15.5, 0.295524, 8, 15.5, 0.295524, -3.7, 5, 0.295524, 0.5, 7.7, 0.295524, 2.9, 15.5, 0.295524, -3.7, 15.5, 0.295524, -15.4, 7.7, 0.295524, -15.4, 2.6, 0.295524, -7.9, -7, 2.29552, -3.7, -6.7, 2.29552, -2.5, -5.2, 2.29552, -1.6, 1.4, 2.29552, -7, -0.4, 2.29552, -9.1, -3.7, 0.295524, -1.3, 1.4, 0.295524, 3.5, 4.1, 0.295524, 0.5, 2.6, 0.295524, -6.7, 1.4, 0.295524, 3.5, -3.7, 0.295524, -1.3, -4.9, 0.295524, -0.0999994, 3.2, 0.295524, 15.5, 9.5, 0.295524, 15.5, 9.5, 0.295524, 11.3, 1.4, 0.295524, 4.4, 1.4, 0.295524, 3.5, -4.9, 0.295524, -0.0999994, -6.4, 0.295524, -0.0999994, -15.4, 0.295524, 5.9, -15.4, 0.295524, 15.5, -9.4, 0.295524, 15.5, 3.2, 0.295524, 15.5, 9.5, 0.295524, 11.3, 3.5, 0.295524, 6.5, -3.1, 0.295524, 15.5, -6.4, 0.295524, -0.0999994, -8.5, 0.295524, -3.4, -15.4, 0.295524, -3.4, -15.4, 0.295524, 5.9, 3.5, 0.295524, 6.5, 1.4, 0.295524, 4.4, -6.4, 0.295524, -0.0999994, -15.4, 0.295524, 5.9, -9.4, 0.295524, 15.5, -3.1, 0.295524, 15.5, 11, 2.29552, 8.3, 10.7, 2.29552, 7.4, 10.1, 2.29552, 7.4, 9.2, 2.29552, 9.8, 4.7, 2.29552, 2, 2.9, 2.29552, 3.5, 2.9, 2.29552, 4.1, 9.2, 2.29552, 9.8, 10.1, 2.29552, 7.4, 10.4, 0.295524, 11, 9.5, 0.295524, 11.3, 9.5, 0.295524, 15.5, 15.5, 0.295524, 8, 12.5, 0.295524, 8, 10.4, 0.295524, 11, 9.5, 0.295524, 15.5, 15.5, 0.295524, 15.5 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 7, 6, 8 ), PoolIntArray( 8, 6, 9 ), PoolIntArray( 9, 6, 10 ), PoolIntArray( 13, 12, 11 ), PoolIntArray( 16, 15, 14 ), PoolIntArray( 18, 17, 19 ), PoolIntArray( 19, 17, 20 ), PoolIntArray( 22, 21, 23 ), PoolIntArray( 23, 21, 24 ), PoolIntArray( 26, 25, 27 ), PoolIntArray( 27, 25, 28 ), PoolIntArray( 29, 34, 30 ), PoolIntArray( 30, 34, 31 ), PoolIntArray( 31, 34, 33 ), PoolIntArray( 31, 33, 32 ), PoolIntArray( 36, 35, 37 ), PoolIntArray( 37, 35, 39 ), PoolIntArray( 37, 39, 38 ), PoolIntArray( 41, 40, 42 ), PoolIntArray( 42, 40, 43 ), PoolIntArray( 46, 45, 44 ), PoolIntArray( 49, 48, 47 ), PoolIntArray( 51, 50, 52 ), PoolIntArray( 52, 50, 53 ), PoolIntArray( 56, 55, 54 ), PoolIntArray( 58, 57, 59 ), PoolIntArray( 59, 57, 60 ), PoolIntArray( 62, 61, 63 ), PoolIntArray( 63, 61, 64 ), PoolIntArray( 66, 65, 67 ), PoolIntArray( 67, 65, 70 ), PoolIntArray( 67, 70, 69 ), PoolIntArray( 67, 69, 68 ), PoolIntArray( 72, 71, 73 ), PoolIntArray( 73, 71, 74 ), PoolIntArray( 76, 75, 77 ), PoolIntArray( 77, 75, 79 ), PoolIntArray( 77, 79, 78 ), PoolIntArray( 82, 81, 80 ), PoolIntArray( 84, 83, 85 ), PoolIntArray( 85, 83, 86 ), PoolIntArray( 86, 83, 87 ) ]
geometry/source_geometry_mode = 1
geometry/source_group_name = "navmesh"

[sub_resource type="SphereShape" id=6]

[sub_resource type="SphereMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.0941176, 0.94902, 0.0235294, 1 )

[node name="NavmeshTest" type="Spatial"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.920505, 0.390731, 0, -0.390731, 0.920505, 0, 0, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="NavmeshObjects" type="Spatial" parent="." groups=["navmesh"]]

[node name="Floor" type="MeshInstance" parent="NavmeshObjects"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="StaticBody" type="StaticBody" parent="NavmeshObjects/Floor"]

[node name="CollisionShape" type="CollisionShape" parent="NavmeshObjects/Floor/StaticBody"]
shape = SubResource( 2 )

[node name="Block" type="MeshInstance" parent="NavmeshObjects"]
transform = Transform( 1.14196, 0, 3.64255, 0, 1, 0, -1.24636, 0, 3.33743, 6.92624, 0.895524, 5.92063 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Block2" type="MeshInstance" parent="NavmeshObjects"]
transform = Transform( 1.07794, 0, -3.80553, 0, 1, 0, 1.30212, 0, 3.15033, -2.92555, 0.895524, -5.26433 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="GlobalNavigation" type="Navigation" parent="."]
script = ExtResource( 3 )

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="GlobalNavigation"]
navmesh = SubResource( 3 )

[node name="CameraClickPlacer" type="Spatial" parent="GlobalNavigation"]
script = ExtResource( 2 )

[node name="EnemyPlaceholder" type="KinematicBody" parent="GlobalNavigation"]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="GlobalNavigation/EnemyPlaceholder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="GlobalNavigation/EnemyPlaceholder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.0156748, -0.860617, 0.509011, 0, 0.509074, 0.860723, -0.999877, 0.0134917, -0.00797964, 15.0906, 18.541, 0.167285 )
